--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 				"axios": "^0.27.2",
 				"chai": "^4.3.6",
 				"dotenv": "^16.0.1",
+				"erc721a-upgradeable": "^4.1.0",
 				"ethereum-waffle": "^3.4.4",
 				"fs-extra": "^10.1.0",
 				"hardhat": "^2.10.0",
