--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 				"hardhat-deploy": "^0.11.11",
 				"hardhat-gas-reporter": "^1.0.8",
 				"hardhat-typechain": "^0.3.5",
+				"nft.storage": "^6.4.0",
+				"sanitize-filename": "^1.6.3",
 				"ts-generator": "^0.1.1",
 				"ts-node": "^10.8.2",
 				"typechain": "^8.1.0",
